--- a/webpack/host/package.json
+++ b/webpack/host/package.json
@@ -9,8 +9,10 @@
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "babel-loader": "8.2.5",
+        "css-loader": "^6.7.3",
         "html-webpack-plugin": "5.5.0",
         "serve": "13.0.4",
+        "style-loader": "^3.3.2",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4",
