--- a/webpack/remote/package.json
+++ b/webpack/remote/package.json
@@ -3,24 +3,29 @@
     "version": "0.0.0",
     "private": true,
     "devDependencies": {
-      "@babel/core": "7.18.9",
-      "@babel/preset-react": "7.18.6",
-      "babel-loader": "8.2.5",
-      "html-webpack-plugin": "5.5.0",
-      "serve": "13.0.4",
-      "webpack": "5.72.1",
-      "webpack-cli": "4.10.0",
-      "webpack-dev-server": "4.13.2"
+        "@babel/core": "7.18.9",
+        "@babel/preset-react": "7.18.6",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.1",
+        "babel-loader": "8.2.5",
+        "css-loader": "^6.7.3",
+        "html-webpack-plugin": "5.5.0",
+        "serve": "13.0.4",
+        "style-loader": "^3.3.2",
+        "ts-loader": "^9.4.2",
+        "webpack": "5.72.1",
+        "webpack-cli": "4.10.0",
+        "webpack-dev-server": "4.13.2"
     },
     "scripts": {
-      "start": "webpack-cli serve",
-      "build": "webpack --mode production",
-      "serve": "serve dist -p 3002",
-      "clean": "rm -rf dist"
+        "start": "webpack-cli serve",
+        "build": "webpack --mode production",
+        "serve": "serve dist -p 3002",
+        "clean": "rm -rf dist"
     },
     "dependencies": {
-      "react": "^16.13.0",
-      "react-dom": "^16.13.0",
-      "moment": "^2.24.0"
+        "moment": "^2.24.0",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0"
     }
-  }
+}
