--- a/webpack/host/src/remoteModuleConfig.json
+++ b/webpack/host/src/remoteModuleConfig.json
@@ -1,8 +1,41 @@
 {
-    "defaultUrl": "ttp://localhost:3002/remoteEntry.js",
-    
-    "footer": {
-        "remoteModuleOverrideUrl": "",
-        "componentName": "Footer"
-    }
+    "defaultUrl": "http://localhost:3002/remoteEntry.js",
+    "defaultScope": "app2",
+    "requiredRemoteModules": [
+        "footer",
+        "header",
+        "sidebar"
+    ],
+    "remoteModules": [
+        {
+            "slot": "footer",
+            "scope": "app2",
+            "componentName": "./Footer",
+            "props": {
+                "title": "Footer"
+            }
+        },
+        {
+            "slot": "header",
+            "scope": "app2",
+            "componentName": "./Header",
+            "props": {
+                "title": "Header"
+            }
+        },
+        {
+            "slot": "sidebar",
+            "scope": "app2",
+            "componentName": "./Sidebar",
+            "props": {
+                "title": "Remote Sidebar",
+                "details": [
+                    {
+                        "name": "link 1",
+                        "url": "google.com"
+                    }
+                ]
+            }
+        }
+    ]
 }
