--- a/webpack/host/src/remoteModuleConfig.json
+++ b/webpack/host/src/remoteModuleConfig.json
@@ -1,6 +1,39 @@
 {
     "defaultUrl": "http://localhost:3002/remoteEntry.js",
     "defaultScope": "app2",
+    "configModules": {
+        "defaultUrl": "http://localhost:3002/remoteEntry.js",
+        "modules": [
+            {
+                "name": "Sidebar",
+                "import": "./Sidebar"
+            },
+            {
+                "name": "Header",
+                "import": "./Header"
+            },
+            {
+                "name": "Footer",
+                "import": "./Footer"
+            },
+            {
+                "name": "Module 1",
+                "import": "./Module"
+            },
+            {
+                "name": "Module 2",
+                "import": "./Module"
+            },
+            {
+                "name": "Module 3",
+                "import": "./Module"
+            },
+            {
+                "name": "Module 4",
+                "import": "./Module"
+            }
+        ]
+    },
     "requiredRemoteModules": [
         "footer",
         "header",
