--- a/webpack/host/src/configuration/remoteModuleConfig.json
+++ b/webpack/host/src/configuration/remoteModuleConfig.json
@@ -59,7 +59,7 @@
         "sidebars": [
             {
                 "enabled": true,
-                "slot": "sidebar",
+                "name": "sidebar",
                 "scope": "app2",
                 "componentName": "./Sidebar",
                 "props": {
@@ -75,7 +75,7 @@
         ],
         "footers": [
             {
-                "slot": "footer",
+                "name": "footer",
                 "scope": "app2",
                 "componentName": "./Footer",
                 "props": {
@@ -84,7 +84,7 @@
             },
             {
                 "enabled": true,
-                "slot": "alternate-footer",
+                "name": "alternate-footer",
                 "scope": "app2",
                 "componentName": "./AlternateFooter",
                 "props": {
@@ -92,45 +92,5 @@
                 }
             }
         ]
-    },
-    "_remoteModules": [
-        {
-            "slot": "alternate-footer",
-            "scope": "app2",
-            "componentName": "./AlternateFooter",
-            "props": {
-                "title": "AlternateFooter"
-            }
-        },
-        {
-            "slot": "footer",
-            "scope": "app2",
-            "componentName": "./Footer",
-            "props": {
-                "title": "Footer"
-            }
-        },
-        {
-            "slot": "header",
-            "scope": "app2",
-            "componentName": "./Header",
-            "props": {
-                "title": "Header"
-            }
-        },
-        {
-            "slot": "sidebar",
-            "scope": "app2",
-            "componentName": "./Sidebar",
-            "props": {
-                "title": "Remote Sidebar",
-                "details": [
-                    {
-                        "name": "link 1",
-                        "url": "google.com"
-                    }
-                ]
-            }
-        }
-    ]
+    }
 }
